<resources>
    <string name="app_name">FoodOrder</string>
    <string name="food_point">FOOD POINT</string>
    <string name="foodpoint">FoodPoint</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up"><u>Don\'t have an account? Sign Up Now</u></string>
    <string name="login">Login</string>
    <string name="name_min_3_characters">Name(Min. 3 Characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min.4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="enter_your_registered_mobile_number">Reg Mobile number:</string>
    <string name="reg_email_id">Reg Email Id:</string>
    <string name="next">Next</string>
    <string name="enter_received_otp">Enter Received OTP:</string>
    <string name="otp_4_characters">OTP(4 Characters)</string>
    <string name="new_password">New Password:</string>
    <string name="new_password_min_4_chars">New Password(Min.4 chars)</string>
    <string name="confrim_password">Confrim Password:</string>
    <string name="submit">Submit</string>
    <string name="Preference_file_name">FoodOrder Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="name">Name</string>
    <string name="title_activity_navigationlayout">Navigationlayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rs">\u20B9</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_100">100</string>
    <string name="person">/person</string>
    <string name="_3_3">3.3</string>
    <string name="sort">sort</string>
    <string name="sort_by">Sort By?</string>
    <string name="mobile_number_profile">Mobile Number profile</string>
    <string name="email_profile">Email Profile</string>
    <string name="q_1_what_do_we_do_when_we_arrive">Q.1 What do we do when we arrive?</string>
    <string name="have_your_phone_ready_with_your_pass_or_a_printed_version_of_your_pass_to_show_the_parking_attendant_follow_the_attendants_directions_to_your_spot_you_will_be_given_an_instruction_and_rules_sheet_upon_arrival_with_more_info_remain_in_your_car_unless_you_need_the_restroom_or_in_case_of_emergency_masks_required_when_leaving_the_vehicle_for_those_reasons">Have your phone ready with your pass, or a printed version of your pass, to show the parking attendant. Follow the attendants\' directions to your spot. You will be given an instruction and rules sheet upon arrival with more info. Remain in your car unless you need the restroom or in case of emergency, masks required when leaving the vehicle for those reasons.</string>
    <string name="q_2_what_if_it_rains">Q.2 What if it rains?</string>
    <string name="this_event_will_occur_rain_or_shine_in_the_event_of_severe_weather_please_check_our_website_and_social_media_for_updates_cancellations_will_be_made_if_absolutely_necessary_and_your_pass_will_be_applied_to_a_future_event_of_your_choice">This event will occur rain or shine. In the event of severe weather, please check our website and social media for updates. Cancellations will be made if absolutely necessary and your pass will be applied to a future event of your choice.</string>
    <string name="q_3_how_do_i_show_proof_of_purchase">Q.3 How do I show proof of purchase?</string>
    <string name="you_will_need_to_pull_up_the_barcode_to_be_scanned_from_your_pass_you_immediately_received_upon_purchase_you_may_show_it_on_your_phone_or_print_it_out">You will need to pull up the barcode to be scanned from your pass you immediately received upon purchase. You may show it on your phone or print it out.</string>
    <string name="q_4_how_will_be_my_orders_delivered">Q.4 . How will be my orders delivered?</string>
    <string name="orders_are_delivered_directly_by_the_swiggy_packaging_assist_suppliers_different_items_in_an_order_could_be_fulfilled_by_different_suppliers_we_will_share_the_contact_details_and_amount_payable_for_all_deliveries_via_email_and_sms">Orders are delivered directly by the Swiggy Packaging Assist suppliers. Different items in an order could be fulfilled by different suppliers. We will share the contact details and amount payable for all deliveries via email and SMS.</string>
    <string name="q_5_how_are_you_guys_are_different">Q.5 How are you guys are different?</string>
    <string name="q5">Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Swiggy Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="q_6_how_do_i_know_my_request_has_been_accepted">Q.6 How do I know my request has been accepted?</string>
    <string name="q6">The partnering recruitment agency will send the restaurant a confirmation email once they have accepted its request. Soon after the restaurant places a request, it will receive communication to approve sample profile(s) and an interview will be scheduled with the candidate at a mutually convenient time. Once the interview(s) has been scheduled, the restaurant will receive another email with all the interview details.</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="_1">1</string>
    <string name="menu_name">Menu Name</string>
    <string name="rss">Rs.</string>
    <string name="_300">300</string>
    <string name="_400">400</string>
    <string name="add">Add</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="menuitem">MenuItem</string>
    <string name="_500">500</string>
    <string name="_700">700</string>
    <string name="rs_400">Rs.400</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been successfully placed!</string>
    <string name="ok">Ok</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="date">Date</string>
    <string name="you_do_not_have_any_favorite_restaurants">You do not have any favorite Restaurants</string>
</resources>