<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        />

        <item
            android:title="@string/my_profile"
            android:id="@+id/myprofile"
            android:icon="@drawable/ic_profile"
            />

        <item
            android:title="@string/favorites_restaurants"
            android:id="@+id/favrestau"
            android:icon="@drawable/ic_favorites"
            />

        <item
            android:title="@string/order_history"
            android:id="@+id/orderhistory"
            android:icon="@drawable/ic_ordershistory"
            />

        <item
            android:title="@string/faqs"
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            />

        <item
            android:title="@string/log_out"
            android:id="@+id/loggout"
            android:icon="@drawable/ic_logout"
            />
    </group>

</menu>