<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fargment.FaqFargment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/q_1_what_do_we_do_when_we_arrive"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q1"
                />
            <TextView
                android:layout_below="@id/q1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/have_your_phone_ready_with_your_pass_or_a_printed_version_of_your_pass_to_show_the_parking_attendant_follow_the_attendants_directions_to_your_spot_you_will_be_given_an_instruction_and_rules_sheet_upon_arrival_with_more_info_remain_in_your_car_unless_you_need_the_restroom_or_in_case_of_emergency_masks_required_when_leaving_the_vehicle_for_those_reasons"
                />
        </RelativeLayout>
        <View
            style="@style/Divider.Horizontal"
            android:background="#000000"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/q_2_what_if_it_rains"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q2"
                />
            <TextView
                android:layout_below="@id/q2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/this_event_will_occur_rain_or_shine_in_the_event_of_severe_weather_please_check_our_website_and_social_media_for_updates_cancellations_will_be_made_if_absolutely_necessary_and_your_pass_will_be_applied_to_a_future_event_of_your_choice"
                />
        </RelativeLayout>

        <View
            style="@style/Divider.Horizontal"
            android:background="#000000"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/q_3_how_do_i_show_proof_of_purchase"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q3"
                />
            <TextView
                android:layout_below="@id/q3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/you_will_need_to_pull_up_the_barcode_to_be_scanned_from_your_pass_you_immediately_received_upon_purchase_you_may_show_it_on_your_phone_or_print_it_out"
                />
        </RelativeLayout>


        <View
            style="@style/Divider.Horizontal"
            android:background="#000000"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/q_4_how_will_be_my_orders_delivered"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q4"
                />
            <TextView
                android:layout_below="@id/q4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/orders_are_delivered_directly_by_the_swiggy_packaging_assist_suppliers_different_items_in_an_order_could_be_fulfilled_by_different_suppliers_we_will_share_the_contact_details_and_amount_payable_for_all_deliveries_via_email_and_sms"
                />
        </RelativeLayout>
        <View
            style="@style/Divider.Horizontal"
            android:background="#000000"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/q_5_how_are_you_guys_are_different"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q5"
                />
            <TextView
                android:layout_below="@id/q5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/q5"
                />
        </RelativeLayout>
        <View
            style="@style/Divider.Horizontal"
            android:background="#000000"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/q_6_how_do_i_know_my_request_has_been_accepted"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:id="@+id/q6"
                />
            <TextView
                android:layout_below="@id/q6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:textColor="#000000"
                android:text="@string/q6"
                />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>