<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ResetPasswordActivity"
    android:background="#ff9800">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        android:id="@+id/resettoolbar"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_below="@id/resettoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_received_otp"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:id="@+id/otptext"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/otptext"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/otp_4_characters"
        android:background="#ffffff"
        android:inputType="number"
        android:textSize="20sp"
        android:maxLength="4"
        android:id="@+id/otpedittxt"
        />
    <TextView
        android:layout_below="@id/otpedittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:id="@+id/newpasstext"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:textStyle="italic"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/newpasstext"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/new_password_min_4_chars"
        android:background="#ffffff"
        android:inputType="numberPassword"
        android:textSize="20sp"
        android:id="@+id/newpassedit"
        />
    <TextView
        android:layout_below="@id/newpassedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confrim_password"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:id="@+id/confirmpasstext"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:textStyle="italic"
        android:layout_marginStart="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/confirmpasstext"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/confirm_password"
        android:background="#ffffff"
        android:inputType="numberPassword"
        android:textSize="20sp"
        android:id="@+id/confrimpassedit"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/confrimpassedit"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:padding="5dp"
        android:id="@+id/btnSubmit"
        />
    </androidx.cardview.widget.CardView>
</RelativeLayout>

