<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardCornerRadius="4dp"
    android:elevation="4dp"
    android:layout_margin="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="horizontal"
        android:background="#FDDBDB">

    <TextView
        android:layout_weight="1.3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/_1"
        android:id="@+id/srno"
        android:layout_marginTop="35dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_weight="5.9"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/menu_name"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:id="@+id/menulistname"
            />
        <TextView
            android:layout_below="@id/menulistname"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:text="@string/rss"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/rs"
            />
        <TextView
            android:id="@+id/cost_for_one_menulist"
            android:layout_toRightOf="@id/rs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menulistname"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/_400"
            android:textSize="15sp"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_weight="2.8"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="5dp"
        android:elevation="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:drawableRight="@drawable/ic_butadd"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:id="@+id/btnadd"
        />
    </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>