<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="#ff9800">



    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/colorPrimary"
        android:id="@+id/forgottoolbar"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/forgot"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:id="@+id/imgfogotpass"
        android:layout_below="@id/forgottoolbar"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number"
        android:textColor="#000000"
        android:id="@+id/forgotpasstext"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/imgfogotpass"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/mobilenum"
        android:layout_below="@id/forgotpasstext"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/mobile_number"
        android:background="#ffffff"
        android:inputType="number"
        android:textSize="20sp"
        android:maxLength="10"
        android:id="@+id/forgotxtmobilereg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_email_id"
        android:textColor="#000000"
        android:id="@+id/forgotpasstext1"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/forgotxtmobilereg"
        android:textStyle="italic"
        />
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/mailreg"
        android:layout_below="@id/forgotpasstext1"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:hint="@string/email_address"
        android:background="#ffffff"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:id="@+id/forgottxtemail"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="#934A01"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:layout_below="@id/forgottxtemail"
        android:padding="5dp"
        android:id="@+id/btnNext"
        />



</RelativeLayout>